--- a/dividend_rankings.html
+++ b/dividend_rankings.html
@@ -216,17 +216,13 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td class="stock-info">600003</td>
-                    <td>ST东北高</td>
-                    <td class="price" data-value="">-</td>                    <td class="dividend-yield" data-value="2.43">2.43</td>                    <td class="dividend-yield" data-value="6.74">6.74</td>                    <td class="dividend-yield" data-value="2.07">2.07</td>                    <td class="dividend-yield" data-value="8.65">8.65</td>                    <td class="dividend-yield" data-value="7.02">7.02</td>                    <td class="dividend-yield" data-value="4.74">4.74</td>                </tr>
-                <tr>
                     <td class="stock-info">000100</td>
                     <td>TCL科技</td>
                     <td class="price" data-value="4.55">4.55</td>                    <td class="dividend-yield" data-value="2.19">2.19</td>                    <td class="dividend-yield" data-value="1.67">1.67</td>                    <td class="dividend-yield" data-value="2.4">2.4</td>                    <td class="dividend-yield" data-value="2.65">2.65</td>                    <td class="dividend-yield" data-value="1.87">1.87</td>                    <td class="dividend-yield" data-value="1.01">1.01</td>                </tr>
                 <tr>
                     <td class="stock-info">000002</td>
                     <td>万科A</td>
-                    <td class="price" data-value="4.95">4.95</td>                    <td class="dividend-yield" data-value="3.12">3.12</td>                    <td class="dividend-yield" data-value="4.5">4.5</td>                    <td class="dividend-yield" data-value="4.76">4.76</td>                    <td class="dividend-yield" data-value="3.73">3.73</td>                    <td class="dividend-yield" data-value="9.72">9.72</td>                    <td class="dividend-yield" data-value="2.64">2.64</td>                </tr>
+                    <td class="price" data-value="4.95">4.95</td>                    <td class="dividend-yield" data-value="3.12">3.12</td>                    <td class="dividend-yield" data-value="4.5">4.5</td>                    <td class="dividend-yield" data-value="4.76">4.76</td>                    <td class="dividend-yield" data-value="3.73">3.73</td>                    <td class="dividend-yield" data-value="2.36">2.36</td>                    <td class="dividend-yield" data-value="5.55">5.55</td>                </tr>
                 <tr>
                     <td class="stock-info">600031</td>
                     <td>三一重工</td>
@@ -234,7 +230,7 @@
                 <tr>
                     <td class="stock-info">600009</td>
                     <td>上海机场</td>
-                    <td class="price" data-value="31.81">31.81</td>                    <td class="dividend-yield" data-value="1.02">1.02</td>                    <td class="dividend-yield" data-value="1.24">1.24</td>                    <td class="dividend-yield" data-value="2.26">2.26</td>                    <td class="dividend-yield" data-value="5.1">5.1</td>                    <td class="dividend-yield" data-value="0.37">0.37</td>                    <td class="dividend-yield" data-value="0.9">0.9</td>                </tr>
+                    <td class="price" data-value="31.81">31.81</td>                    <td class="dividend-yield" data-value="1.02">1.02</td>                    <td class="dividend-yield" data-value="9.47">9.47</td>                    <td class="dividend-yield" data-value="0.95">0.95</td>                    <td class="dividend-yield" data-value="8.49">8.49</td>                    <td class="dividend-yield" data-value="0.37">0.37</td>                    <td class="dividend-yield" data-value="0.9">0.9</td>                </tr>
                 <tr>
                     <td class="stock-info">600018</td>
                     <td>上港集团</td>
@@ -243,6 +239,10 @@
                     <td class="stock-info">600030</td>
                     <td>中信证券</td>
                     <td class="price" data-value="27.86">27.86</td>                    <td class="dividend-yield" data-value="1.96">1.96</td>                    <td class="dividend-yield" data-value="1.37">1.37</td>                    <td class="dividend-yield" data-value="2.04">2.04</td>                    <td class="dividend-yield" data-value="2.46">2.46</td>                    <td class="dividend-yield" data-value="2.37">2.37</td>                    <td class="dividend-yield" data-value="1.02">1.02</td>                </tr>
+                <tr>
+                    <td class="stock-info">000063</td>
+                    <td>中兴通讯</td>
+                    <td class="price" data-value="41.95">41.95</td>                    <td class="dividend-yield" data-value="0.56">0.56</td>                    <td class="dividend-yield" data-value="0.58">0.58</td>                    <td class="dividend-yield" data-value="0.9">0.9</td>                    <td class="dividend-yield" data-value="1.54">1.54</td>                    <td class="dividend-yield" data-value="2.67">2.67</td>                    <td class="dividend-yield" data-value="1.63">1.63</td>                </tr>
                 <tr>
                     <td class="stock-info">601628</td>
                     <td>中国人寿</td>
@@ -266,15 +266,15 @@
                 <tr>
                     <td class="stock-info">000066</td>
                     <td>中国长城</td>
-                    <td class="price" data-value="14.66">14.66</td>                    <td class="dividend-yield" data-value="0.55">0.55</td>                    <td class="dividend-yield" data-value="0.42">0.42</td>                    <td class="dividend-yield" data-value="0.32">0.32</td>                    <td class="dividend-yield" data-value="0.07">0.07</td>                    <td class="dividend-yield" data-value="9.44">9.44</td>                    <td class="dividend-yield" data-value="6.14">6.14</td>                </tr>
-                <tr>
-                    <td class="stock-info">600026</td>
-                    <td>中海发展</td>
-                    <td class="price" data-value="11.44">11.44</td>                    <td class="dividend-yield" data-value="0.58">0.58</td>                    <td class="dividend-yield" data-value="2.96">2.96</td>                    <td class="dividend-yield" data-value="2.41">2.41</td>                    <td class="dividend-yield" data-value="1.19">1.19</td>                    <td class="dividend-yield" data-value="2.74">2.74</td>                    <td class="dividend-yield" data-value="1.85">1.85</td>                </tr>
+                    <td class="price" data-value="14.66">14.66</td>                    <td class="dividend-yield" data-value="0.55">0.55</td>                    <td class="dividend-yield" data-value="0.42">0.42</td>                    <td class="dividend-yield" data-value="0.32">0.32</td>                    <td class="dividend-yield" data-value="0.07">0.07</td>                    <td class="dividend-yield" data-value="5.51">5.51</td>                    <td class="dividend-yield" data-value="6.13">6.13</td>                </tr>
                 <tr>
                     <td class="stock-info">000157</td>
                     <td>中联重科</td>
                     <td class="price" data-value="8.64">8.64</td>                    <td class="dividend-yield" data-value="3.06">3.06</td>                    <td class="dividend-yield" data-value="3.13">3.13</td>                    <td class="dividend-yield" data-value="4.44">4.44</td>                    <td class="dividend-yield" data-value="5.84">5.84</td>                    <td class="dividend-yield" data-value="4.83">4.83</td>                    <td class="dividend-yield" data-value="4.29">4.29</td>                </tr>
+                <tr>
+                    <td class="stock-info">600026</td>
+                    <td>中远海能</td>
+                    <td class="price" data-value="11.44">11.44</td>                    <td class="dividend-yield" data-value="0.58">0.58</td>                    <td class="dividend-yield" data-value="2.96">2.96</td>                    <td class="dividend-yield" data-value="8.73">8.73</td>                    <td class="dividend-yield" data-value="1.19">1.19</td>                    <td class="dividend-yield" data-value="2.74">2.74</td>                    <td class="dividend-yield" data-value="1.85">1.85</td>                </tr>
                 <tr>
                     <td class="stock-info">000538</td>
                     <td>云南白药</td>
@@ -306,15 +306,15 @@
                 <tr>
                     <td class="stock-info">600010</td>
                     <td>包钢股份</td>
-                    <td class="price" data-value="2.47">2.47</td>                    <td class="dividend-yield" data-value="9.13">9.13</td>                    <td class="dividend-yield" data-value="2.57">2.57</td>                    <td class="dividend-yield" data-value="0.68">0.68</td>                    <td class="dividend-yield" data-value="6.63">6.63</td>                    <td class="dividend-yield" data-value="0.69">0.69</td>                    <td class="dividend-yield" data-value="0.11">0.11</td>                </tr>
+                    <td class="price" data-value="2.47">2.47</td>                    <td class="dividend-yield" data-value="5.93">5.93</td>                    <td class="dividend-yield" data-value="2.08">2.08</td>                    <td class="dividend-yield" data-value="0.68">0.68</td>                    <td class="dividend-yield" data-value="2.48">2.48</td>                    <td class="dividend-yield" data-value="2.1">2.1</td>                    <td class="dividend-yield" data-value="0.11">0.11</td>                </tr>
                 <tr>
                     <td class="stock-info">000069</td>
                     <td>华侨城A</td>
-                    <td class="price" data-value="2.56">2.56</td>                    <td class="dividend-yield" data-value="3.91">3.91</td>                    <td class="dividend-yield" data-value="5.81">5.81</td>                    <td class="dividend-yield" data-value="1.38">1.38</td>                    <td class="dividend-yield" data-value="1.1">1.1</td>                    <td class="dividend-yield" data-value="4.1">4.1</td>                    <td class="dividend-yield" data-value="2.24">2.24</td>                </tr>
+                    <td class="price" data-value="2.56">2.56</td>                    <td class="dividend-yield" data-value="3.91">3.91</td>                    <td class="dividend-yield" data-value="5.81">5.81</td>                    <td class="dividend-yield" data-value="1.38">1.38</td>                    <td class="dividend-yield" data-value="7.87">7.87</td>                    <td class="dividend-yield" data-value="3.61">3.61</td>                    <td class="dividend-yield" data-value="4.9">4.9</td>                </tr>
                 <tr>
                     <td class="stock-info">688001</td>
                     <td>华兴源创</td>
-                    <td class="price" data-value="27.59">27.59</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>                    <td class="dividend-yield" data-value="0.47">0.47</td>                    <td class="dividend-yield" data-value="0.6">0.6</td>                    <td class="dividend-yield" data-value="1.09">1.09</td>                    <td class="dividend-yield" data-value="0.49">0.49</td>                    <td class="dividend-yield" data-value="6.32">6.32</td>                </tr>
+                    <td class="price" data-value="27.59">27.59</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>                    <td class="dividend-yield" data-value="0.47">0.47</td>                    <td class="dividend-yield" data-value="0.6">0.6</td>                    <td class="dividend-yield" data-value="1.09">1.09</td>                    <td class="dividend-yield" data-value="0.49">0.49</td>                    <td class="dividend-yield" data-value="8.13">8.13</td>                </tr>
                 <tr>
                     <td class="stock-info">600015</td>
                     <td>华夏银行</td>
@@ -326,7 +326,7 @@
                 <tr>
                     <td class="stock-info">600011</td>
                     <td>华能国际</td>
-                    <td class="price" data-value="7.89">7.89</td>                    <td class="dividend-yield" data-value="2.39">2.39</td>                    <td class="dividend-yield" data-value="4.0">4.0</td>                    <td class="dividend-yield" data-value="5.28">5.28</td>                    <td class="dividend-yield" data-value="6.63">6.63</td>                    <td class="dividend-yield" data-value="2.5">2.5</td>                    <td class="dividend-yield" data-value="4.12">4.12</td>                </tr>
+                    <td class="price" data-value="7.89">7.89</td>                    <td class="dividend-yield" data-value="2.39">2.39</td>                    <td class="dividend-yield" data-value="4.0">4.0</td>                    <td class="dividend-yield" data-value="7.15">7.15</td>                    <td class="dividend-yield" data-value="9.13">9.13</td>                    <td class="dividend-yield" data-value="2.5">2.5</td>                    <td class="dividend-yield" data-value="4.12">4.12</td>                </tr>
                 <tr>
                     <td class="stock-info">600019</td>
                     <td>宝钢股份</td>
@@ -362,7 +362,7 @@
                 <tr>
                     <td class="stock-info">600004</td>
                     <td>白云机场</td>
-                    <td class="price" data-value="9.76">9.76</td>                    <td class="dividend-yield" data-value="0.83">0.83</td>                    <td class="dividend-yield" data-value="0.3">0.3</td>                    <td class="dividend-yield" data-value="4.54">4.54</td>                    <td class="dividend-yield" data-value="6.58">6.58</td>                    <td class="dividend-yield" data-value="0.77">0.77</td>                    <td class="dividend-yield" data-value="1.68">1.68</td>                </tr>
+                    <td class="price" data-value="9.76">9.76</td>                    <td class="dividend-yield" data-value="0.83">0.83</td>                    <td class="dividend-yield" data-value="0.3">0.3</td>                    <td class="dividend-yield" data-value="1.91">1.91</td>                    <td class="dividend-yield" data-value="5.04">5.04</td>                    <td class="dividend-yield" data-value="0.77">0.77</td>                    <td class="dividend-yield" data-value="1.68">1.68</td>                </tr>
                 <tr>
                     <td class="stock-info">600033</td>
                     <td>福建高速</td>
@@ -370,15 +370,11 @@
                 <tr>
                     <td class="stock-info">000938</td>
                     <td>紫光股份</td>
-                    <td class="price" data-value="24.99">24.99</td>                    <td class="dividend-yield" data-value="0.46">0.46</td>                    <td class="dividend-yield" data-value="0.48">0.48</td>                    <td class="dividend-yield" data-value="0.44">0.44</td>                    <td class="dividend-yield" data-value="3.9">3.9</td>                    <td class="dividend-yield" data-value="0.74">0.74</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>                </tr>
+                    <td class="price" data-value="24.99">24.99</td>                    <td class="dividend-yield" data-value="0.46">0.46</td>                    <td class="dividend-yield" data-value="0.48">0.48</td>                    <td class="dividend-yield" data-value="0.44">0.44</td>                    <td class="dividend-yield" data-value="4.76">4.76</td>                    <td class="dividend-yield" data-value="0.74">0.74</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>                </tr>
                 <tr>
                     <td class="stock-info">000333</td>
                     <td>美的集团</td>
                     <td class="price" data-value="82.23">82.23</td>                    <td class="dividend-yield" data-value="2.68">2.68</td>                    <td class="dividend-yield" data-value="1.62">1.62</td>                    <td class="dividend-yield" data-value="2.26">2.26</td>                    <td class="dividend-yield" data-value="4.82">4.82</td>                    <td class="dividend-yield" data-value="5.5">5.5</td>                    <td class="dividend-yield" data-value="4.65">4.65</td>                </tr>
-                <tr>
-                    <td class="stock-info">600001</td>
-                    <td>邯郸钢铁</td>
-                    <td class="price" data-value="">-</td>                    <td class="dividend-yield" data-value="1.62">1.62</td>                    <td class="dividend-yield" data-value="0.69">0.69</td>                    <td class="dividend-yield" data-value="8.24">8.24</td>                    <td class="dividend-yield" data-value="2.24">2.24</td>                    <td class="dividend-yield" data-value="6.24">6.24</td>                    <td class="dividend-yield" data-value="9.59">9.59</td>                </tr>
                 <tr>
                     <td class="stock-info">600008</td>
                     <td>首创股份</td>
