top100数据进行计算

--- a/dividend_rankings.html
+++ b/dividend_rankings.html
@@ -253,6 +253,15 @@
         
                 <div class="section">
             <h2>2020年至2025年股息率横向比较</h2>
+            <div style="margin-bottom: 15px; padding: 15px; background-color: #f0f8ff; border-left: 4px solid #3498db; color: #2c3e50;">
+                <p>数据说明：</p>
+                <ul style="margin-left: 20px;">
+                    <li>统计范围：2020年至2025年沪市和深市的所有股票</li>
+                    <li>筛选条件：2020-2025年间至少有一年股息率大于3%</li>
+                    <li>股息率计算：基于当年1月1日收盘价和全年累计分红金额</li>
+                    <li>方差计算：使用最近3年（2023-2025）的股息率数据</li>
+                </ul>
+            </div>
             <table class="stock-table comparison-table sortable">
                 <thead>
                     <tr>
@@ -273,9 +282,9 @@
                     <td class="stock-info">000002</td>
                     <td>万科A</td>
                     <td class="price" data-value="4.95">4.95</td>
-                    <td class="dividend-yield" data-value="27.26">27.26</td>
-                    <td class="dividend-yield" data-value="3.82">3.82</td>                    <td class="dividend-yield" data-value="3.43">3.43</td>
-                    <td class="price" data-value="7.11">7.11</td>                    <td class="dividend-yield" data-value="7.72">7.72</td>
+                    <td class="dividend-yield" data-value="22.63">22.63</td>
+                    <td class="dividend-yield" data-value="4.91">4.91</td>                    <td class="dividend-yield" data-value="5.96">5.96</td>
+                    <td class="price" data-value="7.11">7.11</td>                    <td class="dividend-yield" data-value="0.56">0.56</td>
                     <td class="price" data-value="10.15">10.15</td>                    <td class="dividend-yield" data-value="3.73">3.73</td>
                     <td class="price" data-value="18.23">18.23</td>                    <td class="dividend-yield" data-value="4.76">4.76</td>
                     <td class="price" data-value="20.49">20.49</td>                    <td class="dividend-yield" data-value="4.5">4.5</td>
@@ -297,12 +306,12 @@
                     <td class="stock-info">600009</td>
                     <td>上海机场</td>
                     <td class="price" data-value="31.81">31.81</td>
-                    <td class="dividend-yield" data-value="22.6">22.6</td>
-                    <td class="dividend-yield" data-value="10.62">10.62</td>                    <td class="dividend-yield" data-value="1.53">1.53</td>
+                    <td class="dividend-yield" data-value="22.85">22.85</td>
+                    <td class="dividend-yield" data-value="15.48">15.48</td>                    <td class="dividend-yield" data-value="1.53">1.53</td>
                     <td class="price" data-value="33.31">33.31</td>                    <td class="dividend-yield" data-value="0.68">0.68</td>
-                    <td class="price" data-value="32.18">32.18</td>                    <td class="dividend-yield" data-value="7.98">7.98</td>
-                    <td class="price" data-value="56.25">56.25</td>                    <td class="dividend-yield" data-value="3.66">3.66</td>
-                    <td class="price" data-value="48.52">48.52</td>                    <td class="dividend-yield" data-value="7.73">7.73</td>
+                    <td class="price" data-value="32.18">32.18</td>                    <td class="dividend-yield" data-value="9.42">9.42</td>
+                    <td class="price" data-value="56.25">56.25</td>                    <td class="dividend-yield" data-value="5.66">5.66</td>
+                    <td class="price" data-value="48.52">48.52</td>                    <td class="dividend-yield" data-value="4.54">4.54</td>
                     <td class="price" data-value="77.49">77.49</td>                    <td class="dividend-yield" data-value="1.02">1.02</td>
                     <td class="price" data-value="77.36">77.36</td>                </tr>
                 <tr>
@@ -393,9 +402,9 @@
                     <td class="stock-info">000066</td>
                     <td>中国长城</td>
                     <td class="price" data-value="14.66">14.66</td>
-                    <td class="dividend-yield" data-value="16.87">16.87</td>
-                    <td class="dividend-yield" data-value="15.49">15.49</td>                    <td class="dividend-yield" data-value="5.87">5.87</td>
-                    <td class="price" data-value="13.95">13.95</td>                    <td class="dividend-yield" data-value="9.64">9.64</td>
+                    <td class="dividend-yield" data-value="10.67">10.67</td>
+                    <td class="dividend-yield" data-value="12.45">12.45</td>                    <td class="dividend-yield" data-value="8.07">8.07</td>
+                    <td class="price" data-value="13.95">13.95</td>                    <td class="dividend-yield" data-value="1.24">1.24</td>
                     <td class="price" data-value="10.01">10.01</td>                    <td class="dividend-yield" data-value="0.07">0.07</td>
                     <td class="price" data-value="10.73">10.73</td>                    <td class="dividend-yield" data-value="0.32">0.32</td>
                     <td class="price" data-value="14.67">14.67</td>                    <td class="dividend-yield" data-value="0.42">0.42</td>
@@ -417,11 +426,11 @@
                     <td class="stock-info">600026</td>
                     <td>中远海能</td>
                     <td class="price" data-value="11.44">11.44</td>
-                    <td class="dividend-yield" data-value="17.24">17.24</td>
+                    <td class="dividend-yield" data-value="19.96">19.96</td>
                     <td class="dividend-yield" data-value="1.99">1.99</td>                    <td class="dividend-yield" data-value="1.85">1.85</td>
                     <td class="price" data-value="11.34">11.34</td>                    <td class="dividend-yield" data-value="4.46">4.46</td>
                     <td class="price" data-value="12.79">12.79</td>                    <td class="dividend-yield" data-value="1.19">1.19</td>
-                    <td class="price" data-value="12.58">12.58</td>                    <td class="dividend-yield" data-value="6.2">6.2</td>
+                    <td class="price" data-value="12.58">12.58</td>                    <td class="dividend-yield" data-value="8.92">8.92</td>
                     <td class="price" data-value="6.11">6.11</td>                    <td class="dividend-yield" data-value="2.96">2.96</td>
                     <td class="price" data-value="6.76">6.76</td>                    <td class="dividend-yield" data-value="0.58">0.58</td>
                     <td class="price" data-value="6.93">6.93</td>                </tr>
@@ -513,22 +522,22 @@
                     <td class="stock-info">600010</td>
                     <td>包钢股份</td>
                     <td class="price" data-value="2.47">2.47</td>
-                    <td class="dividend-yield" data-value="21.16">21.16</td>
-                    <td class="dividend-yield" data-value="15.79">15.79</td>                    <td class="dividend-yield" data-value="0.11">0.11</td>
-                    <td class="price" data-value="1.81">1.81</td>                    <td class="dividend-yield" data-value="9.41">9.41</td>
-                    <td class="price" data-value="1.45">1.45</td>                    <td class="dividend-yield" data-value="7.25">7.25</td>
+                    <td class="dividend-yield" data-value="27.38">27.38</td>
+                    <td class="dividend-yield" data-value="11.58">11.58</td>                    <td class="dividend-yield" data-value="0.11">0.11</td>
+                    <td class="price" data-value="1.81">1.81</td>                    <td class="dividend-yield" data-value="8.02">8.02</td>
+                    <td class="price" data-value="1.45">1.45</td>                    <td class="dividend-yield" data-value="6.34">6.34</td>
                     <td class="price" data-value="1.93">1.93</td>                    <td class="dividend-yield" data-value="0.68">0.68</td>
-                    <td class="price" data-value="2.79">2.79</td>                    <td class="dividend-yield" data-value="1.26">1.26</td>
-                    <td class="price" data-value="1.18">1.18</td>                    <td class="dividend-yield" data-value="2.45">2.45</td>
+                    <td class="price" data-value="2.79">2.79</td>                    <td class="dividend-yield" data-value="4.22">4.22</td>
+                    <td class="price" data-value="1.18">1.18</td>                    <td class="dividend-yield" data-value="8.01">8.01</td>
                     <td class="price" data-value="1.33">1.33</td>                </tr>
                 <tr>
                     <td class="stock-info">000069</td>
                     <td>华侨城A</td>
                     <td class="price" data-value="2.56">2.56</td>
-                    <td class="dividend-yield" data-value="21.4">21.4</td>
-                    <td class="dividend-yield" data-value="13.56">13.56</td>                    <td class="dividend-yield" data-value="0.92">0.92</td>
-                    <td class="price" data-value="2.62">2.62</td>                    <td class="dividend-yield" data-value="8.64">8.64</td>
-                    <td class="price" data-value="3.03">3.03</td>                    <td class="dividend-yield" data-value="0.74">0.74</td>
+                    <td class="dividend-yield" data-value="15.53">15.53</td>
+                    <td class="dividend-yield" data-value="0.41">0.41</td>                    <td class="dividend-yield" data-value="0.57">0.57</td>
+                    <td class="price" data-value="2.62">2.62</td>                    <td class="dividend-yield" data-value="1.86">1.86</td>
+                    <td class="price" data-value="3.03">3.03</td>                    <td class="dividend-yield" data-value="2.0">2.0</td>
                     <td class="price" data-value="5.29">5.29</td>                    <td class="dividend-yield" data-value="1.38">1.38</td>
                     <td class="price" data-value="7.26">7.26</td>                    <td class="dividend-yield" data-value="5.81">5.81</td>
                     <td class="price" data-value="6.89">6.89</td>                    <td class="dividend-yield" data-value="3.91">3.91</td>
@@ -537,8 +546,8 @@
                     <td class="stock-info">688001</td>
                     <td>华兴源创</td>
                     <td class="price" data-value="27.59">27.59</td>
-                    <td class="dividend-yield" data-value="8.39">8.39</td>
-                    <td class="dividend-yield" data-value="4.89">4.89</td>                    <td class="dividend-yield" data-value="5.45">5.45</td>
+                    <td class="dividend-yield" data-value="11.2">11.2</td>
+                    <td class="dividend-yield" data-value="12.46">12.46</td>                    <td class="dividend-yield" data-value="8.26">8.26</td>
                     <td class="price" data-value="26.29">26.29</td>                    <td class="dividend-yield" data-value="0.49">0.49</td>
                     <td class="price" data-value="34.72">34.72</td>                    <td class="dividend-yield" data-value="1.09">1.09</td>
                     <td class="price" data-value="27.6">27.6</td>                    <td class="dividend-yield" data-value="0.6">0.6</td>
@@ -573,11 +582,11 @@
                     <td class="stock-info">600011</td>
                     <td>华能国际</td>
                     <td class="price" data-value="7.89">7.89</td>
-                    <td class="dividend-yield" data-value="18.92">18.92</td>
-                    <td class="dividend-yield" data-value="0.9">0.9</td>                    <td class="dividend-yield" data-value="4.12">4.12</td>
+                    <td class="dividend-yield" data-value="27.98">27.98</td>
+                    <td class="dividend-yield" data-value="3.65">3.65</td>                    <td class="dividend-yield" data-value="4.12">4.12</td>
                     <td class="price" data-value="6.56">6.56</td>                    <td class="dividend-yield" data-value="2.5">2.5</td>
-                    <td class="price" data-value="8.0">8.0</td>                    <td class="dividend-yield" data-value="1.86">1.86</td>
-                    <td class="price" data-value="7.91">7.91</td>                    <td class="dividend-yield" data-value="4.05">4.05</td>
+                    <td class="price" data-value="8.0">8.0</td>                    <td class="dividend-yield" data-value="7.11">7.11</td>
+                    <td class="price" data-value="7.91">7.91</td>                    <td class="dividend-yield" data-value="7.86">7.86</td>
                     <td class="price" data-value="9.0">9.0</td>                    <td class="dividend-yield" data-value="4.0">4.0</td>
                     <td class="price" data-value="4.5">4.5</td>                    <td class="dividend-yield" data-value="2.39">2.39</td>
                     <td class="price" data-value="5.64">5.64</td>                </tr>
@@ -681,11 +690,11 @@
                     <td class="stock-info">600004</td>
                     <td>白云机场</td>
                     <td class="price" data-value="9.76">9.76</td>
-                    <td class="dividend-yield" data-value="10.71">10.71</td>
-                    <td class="dividend-yield" data-value="0.23">0.23</td>                    <td class="dividend-yield" data-value="1.68">1.68</td>
+                    <td class="dividend-yield" data-value="17.37">17.37</td>
+                    <td class="dividend-yield" data-value="13.57">13.57</td>                    <td class="dividend-yield" data-value="1.68">1.68</td>
                     <td class="price" data-value="9.35">9.35</td>                    <td class="dividend-yield" data-value="0.77">0.77</td>
-                    <td class="price" data-value="9.72">9.72</td>                    <td class="dividend-yield" data-value="0.59">0.59</td>
-                    <td class="price" data-value="14.56">14.56</td>                    <td class="dividend-yield" data-value="6.54">6.54</td>
+                    <td class="price" data-value="9.72">9.72</td>                    <td class="dividend-yield" data-value="9.0">9.0</td>
+                    <td class="price" data-value="14.56">14.56</td>                    <td class="dividend-yield" data-value="4.79">4.79</td>
                     <td class="price" data-value="12.46">12.46</td>                    <td class="dividend-yield" data-value="0.3">0.3</td>
                     <td class="price" data-value="14.04">14.04</td>                    <td class="dividend-yield" data-value="0.83">0.83</td>
                     <td class="price" data-value="17.52">17.52</td>                </tr>
@@ -705,10 +714,10 @@
                     <td class="stock-info">000938</td>
                     <td>紫光股份</td>
                     <td class="price" data-value="24.99">24.99</td>
-                    <td class="dividend-yield" data-value="8.04">8.04</td>
-                    <td class="dividend-yield" data-value="5.85">5.85</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>
+                    <td class="dividend-yield" data-value="10.12">10.12</td>
+                    <td class="dividend-yield" data-value="11.54">11.54</td>                    <td class="dividend-yield" data-value="0.29">0.29</td>
                     <td class="price" data-value="26.01">26.01</td>                    <td class="dividend-yield" data-value="0.74">0.74</td>
-                    <td class="price" data-value="18.84">18.84</td>                    <td class="dividend-yield" data-value="5.63">5.63</td>
+                    <td class="price" data-value="18.84">18.84</td>                    <td class="dividend-yield" data-value="7.71">7.71</td>
                     <td class="price" data-value="20.37">20.37</td>                    <td class="dividend-yield" data-value="0.44">0.44</td>
                     <td class="price" data-value="22.84">22.84</td>                    <td class="dividend-yield" data-value="0.48">0.48</td>
                     <td class="price" data-value="20.65">20.65</td>                    <td class="dividend-yield" data-value="0.46">0.46</td>
